feat:视频生成测试通过